veecle-os-runtime-macros/tests/ui/actor/init_context/specific_lifetime.stderr
error: lifetimes on actor arguments must be anonymous or static
 --> tests/ui/actor/init_context/specific_lifetime.rs:3:37
  |
3 |     #[init_context] _init_context: &'a u8,
  |                                     ^^
